<resources>
    <string name="app_name">Apex Blogger</string>

    <string name="title_onboarding_1">Free Publication</string>
    <string name="description_onboarding_1">Lorem ipsum dolor sit amet, consetetur
sadipscing elitr, sed diam nonumy eirmod</string>

    <string name="title_onboarding_2">Copyright Protection</string>
    <string name="description_onboarding_2">Lorem ipsum dolor sit amet, consetetur
sadipscing elitr, sed diam nonumy eirmod</string>

    <string name="title_onboarding_3">Wide Readership</string>
    <string name="description_onboarding_3">Lorem ipsum dolor sit amet, consetetur
sadipscing elitr, sed diam nonumy eirmod</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>

    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="welcome_back">Welcome back</string>
    <string name="your_email">YOUR EMAIL</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="name_of_user">Name of User</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="_99">99</string>
    <string name="following">Following</string>
    <string name="collection">Collection</string>
    <string name="my_articles">My articles</string>
    <string name="login_with_google">Login with google</string>
    <string name="label" />
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_user_name">Enter Username</string>
    <string name="your_name">Enter Name</string>
    <string name="your_username">Enter Username</string>
    <string name="your_first_name">Enter First Name</string>
    <string name="your_last_name">Enter Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="your_country">YOUR COUNTRY</string>
    <string name="your_number">YOUR NUMBER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hire">Hire</string>
    <string name="todo">TODO</string>
    <string name="search">search</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy">Privacy</string>
    <string name="content">Content</string>
    <string name="about">About Us</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="title"><![CDATA[Determining When To Engage With Politics & Clients]]></string>
    <string name="post">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore mag na aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</string>
    <string name="count">64</string>
    <string name="Name">Jhon Doe</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="share">Share</string>
    <string name="date">Date</string>
    <string name="user_image">User Image</string>
    <string name="options">Options</string>
    <string name="article_heading">4th of july outfits for the whole Fam</string>
    <string name="_1hr_ago">1hr ago</string>
    <string name="apex_blogging_app">Apex Blogging App</string>
    <string name="version">Version</string>
    <string name="ver_code">00.00.000.16.0</string>
    <string name="blog_feed">Blog Feed</string>
    <string name="title_short">The art of being artist</string>
    <string name="adventure">Adventure</string>
    <string name="new_article">New Article</string>
    <string name="article_title">Article Title</string>
    <string name="tags">Add Tags</string>
    <string name="article_content">Article Content</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="more">more</string>
    <string name="awarded_collection">Awarded Collection</string>
    <string name="international">International</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retry">Retry</string>
</resources>