<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_of_user"
        app:layout_constraintEnd_toEndOf="@+id/profile_img"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/profile_img" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/name_text"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />


    <TextView
        android:id="@+id/follower_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/followers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text" />

    <TextView
        android:id="@+id/follower_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_99"
        app:layout_constraintEnd_toEndOf="@+id/follower_count_text"
        app:layout_constraintStart_toStartOf="@+id/follower_count_text"
        app:layout_constraintTop_toBottomOf="@+id/follower_count_text" />

    <TextView
        android:id="@+id/following_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="@+id/location_text"
        app:layout_constraintStart_toStartOf="@+id/location_text"
        app:layout_constraintTop_toBottomOf="@+id/location_text" />

    <TextView
        android:id="@+id/following_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_99"
        app:layout_constraintEnd_toEndOf="@+id/following_count_text"
        app:layout_constraintStart_toStartOf="@+id/following_count_text"
        app:layout_constraintTop_toBottomOf="@+id/following_count_text" />

    <TextView
        android:id="@+id/collection_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/collection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text" />

    <TextView
        android:id="@+id/collection_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_99"
        app:layout_constraintEnd_toEndOf="@+id/collection_count_text"
        app:layout_constraintStart_toStartOf="@+id/collection_count_text"
        app:layout_constraintTop_toBottomOf="@+id/collection_count_text" />



    <TextView
        android:id="@+id/article_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/my_articles"
        app:layout_constraintStart_toStartOf="@+id/follower_count_text"
        app:layout_constraintTop_toBottomOf="@+id/follower_text" />

    <ImageView
        android:id="@+id/grid_icon"
        android:layout_width="30dp"
        android:layout_height="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/list_icon"
        app:layout_constraintEnd_toEndOf="@+id/collection_text"
        app:layout_constraintTop_toTopOf="@+id/list_icon"
        app:srcCompat="@drawable/arrow_pointing_left_icon"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/list_icon"
        android:layout_width="30dp"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/article_text"
        app:layout_constraintEnd_toStartOf="@+id/grid_icon"
        app:layout_constraintTop_toTopOf="@+id/article_text"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/arrow_pointing_left_icon"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>